[package]
name = "metlink-tracker-cli"
version = "0.1.0"
authors = ["Moss Cantwell <mossman2142@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
metlink-tracker-lib = { path = "metlink-tracker-lib" }
toml = "0.8"
serde = {version = "1.0", features = ["derive"] }
clap = "4"
geojson = "0.24.1"
serde_json = "1.0"
geo = {version = "0.26.0", features = ["use-serde"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }